# agent-toolbelt

./: .gitignore  README.md  pyproject.toml
families/aliexpress-cli/: README.md  pyproject.toml
families/aliexpress-cli/claude/: README.md
families/aliexpress-cli/claude/marketplaces/agent-toolbelt-local/.claude-plugin/: marketplace.json
families/aliexpress-cli/codex/skills/aliexpress-cli/: SKILL.md
families/aliexpress-cli/codex/skills/aliexpress-cli/agents/: openai.yaml
families/aliexpress-cli/src/agent_toolbelt_aliexpress_cli/: __init__.py  aliexpress_cli.py  cli.py
families/aliexpress-cli/src/agent_toolbelt_aliexpress_cli/assets/aliexpress-intent-cli/: pyproject.toml
families/aliexpress-cli/tests/: test_aliexpress_cli.py
families/amazon-cli/: README.md  pyproject.toml
families/amazon-cli/claude/: README.md
families/amazon-cli/claude/marketplaces/agent-toolbelt-local/.claude-plugin/: marketplace.json
families/amazon-cli/codex/skills/amazon-cli/: SKILL.md
families/amazon-cli/src/agent_toolbelt_amazon_cli/: __init__.py  amazon_cli.py  cli.py
families/amazon-cli/tests/: test_amazon_cli.py
families/antigravity/: README.md  pyproject.toml
families/antigravity/claude/: README.md
families/antigravity/codex/skills/antigravity-cli/: SKILL.md
families/antigravity/src/agent_toolbelt_antigravity/: __init__.py  cli.py  evidence.py  proxy.py  runtime.py
families/antigravity/tests/: test_antigravity.py  test_evidence.py  test_proxy.py
families/codex-thread-recall/: README.md  pyproject.toml
families/codex-thread-recall/codex/skills/codex-thread-recall/: SKILL.md
families/codex-thread-recall/docs/: schema-v9-source-index.md
families/codex-thread-recall/src/agent_toolbelt_codex_thread_recall/: __init__.py  cli.py  thread_recall.py
families/codex-thread-recall/tests/: test_codex_thread_recall.py
families/everything/: README.md  pyproject.toml
families/everything/codex/skills/everything-search/: SKILL.md
families/everything/src/agent_toolbelt_everything/: __init__.py  cli.py  everything.py
families/everything/tests/: test_everything.py
families/gemini/: README.md  pyproject.toml
families/gemini/codex/skills/gemini-cli/: SKILL.md
families/gemini/src/agent_toolbelt_gemini/: __init__.py  cli.py  gemini.py
families/gemini/tests/: test_gemini.py
families/linkedin-cv/: README.md  future_improvements.md  pyproject.toml
families/linkedin-cv/claude/: README.md
families/linkedin-cv/codex/skills/linkedin-cv/: SKILL.md
families/linkedin-cv/src/agent_toolbelt_linkedin_cv/: __init__.py  cli.py  linkedin_cv.py
families/linkedin-cv/tests/: test_linkedin_cv.py
families/mail-domain-quarantine/: README.md  pyproject.toml
families/mail-domain-quarantine/codex/skills/mail-domain-quarantine/: SKILL.md
families/mail-domain-quarantine/src/mail_domain_quarantine/: __init__.py  cli.py  policy.py  scanner.py  state.py
families/mail-domain-quarantine/tests/: test_cli.py  test_policy.py  test_scanner.py  test_state.py
families/media/: README.md  pyproject.toml
families/media/codex/skills/yt-dlp-ffmpeg/: SKILL.md
families/media/src/agent_toolbelt_media/: __init__.py  cli.py  media.py
families/media/tests/: test_media.py
families/observable-reputation/: README.md  pyproject.toml
families/observable-reputation/codex/skills/observable-reputation/: SKILL.md
families/observable-reputation/src/observable_reputation/: __init__.py  cache.py  classifier.py  cli.py  exports.py  observables.py  providers.py
families/observable-reputation/tests/: test_classifier.py  test_cli.py  test_observables.py  test_providers.py
families/outlook-classic-mail/: README.md  pyproject.toml
families/outlook-classic-mail/claude/: README.md
families/outlook-classic-mail/codex/skills/outlook-classic-mail/: SKILL.md
families/outlook-classic-mail/local-client/: README.md  pyproject.toml
families/outlook-classic-mail/local-client/src/outlook_classic_mail_client/: __init__.py  blocklists.py  cli.py  client.py  domain_inspector.py  mail_cache.py  queueing.py
families/outlook-classic-mail/local-client/tests/: test_blocklists.py  test_client.py  test_diagnostics.py  test_domain_inspector.py  test_queueing.py
families/outlook-classic-mail/src/agent_toolbelt_outlook_classic_mail/: __init__.py  cli.py  outlook_classic_mail.py
families/outlook-classic-mail/tests/: test_outlook_classic_mail.py
families/skill-gardener/: README.md  pyproject.toml
families/skill-gardener/src/agent_toolbelt_skill_gardener/: __init__.py  cli.py  gardener.py
families/skill-gardener/tests/: test_skill_gardener.py
families/skills-sh-scout/: README.md  pyproject.toml
families/skills-sh-scout/codex/skills/skills-sh-scout/: SKILL.md
families/skills-sh-scout/src/agent_toolbelt_skills_sh_scout/: __init__.py  cli.py  scout.py
families/skills-sh-scout/tests/: test_skills_sh_scout.py
families/skroutz-cli/: README.md  pyproject.toml
families/skroutz-cli/claude/: README.md
families/skroutz-cli/codex/skills/skroutz-cli/: SKILL.md
families/skroutz-cli/src/agent_toolbelt_skroutz_cli/: __init__.py  cli.py  skroutz_cli.py
families/skroutz-cli/tests/: test_skroutz_cli.py
families/whatsapp-local-read/: README.md  pyproject.toml
families/whatsapp-local-read/claude/: README.md
families/whatsapp-local-read/codex/skills/whatsapp-local-read/: SKILL.md
families/whatsapp-local-read/src/agent_toolbelt_whatsapp_local_read/: __init__.py  cli.py  whatsapp_local_read.py
families/whatsapp-local-read/tests/: test_whatsapp_local_read.py
families/whatsapp-wacli/: README.md  pyproject.toml
families/whatsapp-wacli/claude/: README.md
families/whatsapp-wacli/codex/skills/whatsapp-wacli/: SKILL.md
families/whatsapp-wacli/local-client/: README.md  pyproject.toml
families/whatsapp-wacli/local-client/src/whatsapp_wacli_agent/: __init__.py  agent.py  cli.py
families/whatsapp-wacli/local-client/tests/: test_agent.py
families/whatsapp-wacli/src/agent_toolbelt_whatsapp_wacli/: __init__.py  cli.py  whatsapp_wacli.py
families/whatsapp-wacli/tests/: test_whatsapp_wacli.py
(+196 files in other folders)
