[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbelt-gemini"
version = "0.1.0"
description = "Gemini-powered public URL inspection and research companion helpers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darkaxt" }]
dependencies = ["agent-toolbelt-core"]

[project.scripts]
agent-toolbelt-gemini = "agent_toolbelt_gemini.cli:entrypoint"

[tool.uv.sources]
agent-toolbelt-core = { workspace = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
