[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbelt-outlook-classic-mail"
version = "0.1.0"
description = "Bridge the local Outlook Classic COM client into agent-toolbelt."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darkaxt" }]
dependencies = ["agent-toolbelt-core"]

[project.scripts]
agent-toolbelt-outlook-classic-mail = "agent_toolbelt_outlook_classic_mail.cli:entrypoint"

[tool.uv.sources]
agent-toolbelt-core = { workspace = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
