[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbelt-skills-sh-scout"
version = "0.1.0"
description = "skills.sh discovery gate for agent skill creation and expansion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darkaxt" }]
dependencies = []

[project.scripts]
agent-toolbelt-skills-sh-scout = "agent_toolbelt_skills_sh_scout.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
