[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbelt-skroutz-cli"
version = "0.1.0"
description = "Bridge the local Skroutz CLI into agent-toolbelt."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darkaxt" }]
dependencies = ["agent-toolbelt-core"]

[project.scripts]
agent-toolbelt-skroutz-cli = "agent_toolbelt_skroutz_cli.cli:entrypoint"

[tool.uv.sources]
agent-toolbelt-core = { workspace = true }

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_toolbelt_skroutz_cli = [
  "assets/skroutz-intent-cli/pyproject.toml",
  "assets/skroutz-intent-cli/skroutz_intent_cli/*.py",
  "assets/skroutz-intent-cli/tests/*.py",
  "assets/skroutz-intent-cli/tests/fixtures/*.html",
]
