[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbelt-whatsapp-local-read"
version = "0.1.0"
description = "Bridge a local read-only WhatsApp Desktop inspection client into agent-toolbelt."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Darkaxt" }]
dependencies = ["agent-toolbelt-core"]

[project.scripts]
agent-toolbelt-whatsapp-local-read = "agent_toolbelt_whatsapp_local_read.cli:entrypoint"

[tool.uv.sources]
agent-toolbelt-core = { workspace = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
