[project]
name = "aliexpress-intent-cli"
version = "0.1.0"
description = "Local AliExpress product search and item browsing CLI."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.52",
]

[project.scripts]
aliexpress-cli = "aliexpress_intent_cli.cli:entrypoint"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aliexpress_intent_cli*"]
