[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-intent-cli"
version = "0.1.0"
description = "Intent-aware Amazon CLI with Gemini-backed query resolution."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "playwright>=1.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
amazon-cli = "amazon_intent_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
