[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skroutz-intent-cli"
version = "0.1.0"
description = "Local Skroutz Cyprus shopping CLI."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
skroutz-cli = "skroutz_intent_cli.cli:entrypoint"

[tool.setuptools]
packages = ["skroutz_intent_cli"]
